# pi-openclaw-mcp-stack

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  edgeai_docs_embedding_qwen1_5_0_5b_instruct.ipynb  llms.txt  serve_model.py
agentic-mcp/: Dockerfile  README.md  __main__.py  opencode-mcp-config.json  pyproject.toml  requirements.txt  server.py
agentic-mcp/agentic_mcp/: __init__.py  server.py
agentic-mcp/k8s/: README.md  config.yaml  deployment.yaml  metallb-ingress.md
agentic-mcp/k8s/helm/agentic-mcp/: Chart.yaml  values.yaml
agentic-mcp/k8s/helm/agentic-mcp/templates/: _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
agentic-mcp/src/: __init__.py
agentic-mcp/src/bridges/: __init__.py
agentic-mcp/src/hardware/: __init__.py
agentic-mcp/src/llm/: __init__.py
agentic-mcp/src/tools/: __init__.py
clawdbot/: Dockerfile  bot.js
docs/: README.md  architecture.md  ei-arduino-deploy.md  hardware-acceleration-host-setup.md  kubernetes-distributed-acceleration.md  kubernetes-distributed-mcp.md  modes.md  observability.md  ollama.md  pi5-ei-to-nano33ble.md  pi5-setup.md  unoq-mwc-demo.md
ei-mcp-bridge/: Dockerfile  Dockerfile.image  server.cjs  server.js
gateway/: Dockerfile  server.js
scripts/: SKILL.md  arduino_mcp.py  ei_deploy_helpers.py  flash-nano33ble.sh  install_deps.sh  openclaw-mcp-config.json  pi5-quickstart.sh  setup-agentic-mcp.sh  setup-jetson-accel.sh  setup-nvidia-2070.sh  setup-rubikpi-qnn-accel.sh  setup-unoq-mwc-demo.sh
skills/pi-openclaw-arduino-flash/: SKILL.md
(+26 files in other folders)
