[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mcp"
version = "0.1.0"
description = "Agentic MCP server with local LLM support for Pi/GPU laptops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pyserial>=3.5",
]

[project.scripts]
agentic-mcp = "agentic_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_mcp*"]
